force-app/main/default/objects/KimbleOne__JourneyLeg__c/KimbleOne__JourneyLeg__c.object-meta.xml
<CustomObject>
    <label>Journey Leg</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Journey Leg Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Legs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>