force-app/main/default/objects/KimbleOne__JourneyLeg__c/fields/KimbleOne__ArrivalTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ArrivalTime__c</fullName>
    <label>Arrival Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>