force-app/main/default/objects/KimbleOne__JourneyLeg__c/fields/KimbleOne__DepartureTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DepartureTime__c</fullName>
    <label>Departure Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>