force-app/main/default/objects/KimbleOne__JourneyLeg__c/fields/KimbleOne__Journey__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Journey__c</fullName>
    <label>Journey</label>
    <referenceTo>KimbleOne__Journey__c</referenceTo>
    <relationshipLabel>Journey Legs</relationshipLabel>
    <relationshipName>JourneyLegs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>