force-app/main/default/objects/KimbleOne__JourneyLeg__c/fields/KimbleOne__JourneyLocationArrival__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__JourneyLocationArrival__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Arriving At</label>
    <referenceTo>KimbleOne__JourneyLocation__c</referenceTo>
    <relationshipLabel>Journey Legs (Arriving)</relationshipLabel>
    <relationshipName>JourneyLegsArrivalLocation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>