force-app/main/default/objects/KimbleOne__JourneyLeg__c/fields/KimbleOne__JourneySection__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__JourneySection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey Section</label>
    <referenceTo>KimbleOne__JourneySection__c</referenceTo>
    <relationshipLabel>Journey Legs</relationshipLabel>
    <relationshipName>JourneyLegs</relationshipName>
    <type>Lookup</type>
</CustomField>